# Giufin.github.io

./: .gitignore  Cargo.toml  index.html  index.js  index.ts  md.js  new_css_prototype.css  new_html_prototype.html  package.json  patche thingy.txt  special_property_data.json  tsconfig.json
characters/: THLW_BulletGroups_Flandre Scarlet.json  THLW_BulletGroups_Kasen Ibaraki.json  THLW_BulletGroups_Lily White.json  THLW_BulletGroups_Luna Child.json  THLW_BulletGroups_Marisa Kirisame.json  THLW_BulletGroups_Medicine Melancholy.json  THLW_BulletGroups_Nitori Kawashiro.json  THLW_BulletGroups_Patchouli Knowledge(1).json  THLW_BulletGroups_Ran Yakumo.json  THLW_BulletGroups_Reisen Udongein Inaba.json  THLW_BulletGroups_Remilia Scarlet.json  THLW_BulletGroups_Star Sapphire.json  THLW_BulletGroups_Sunny Milk.json  THLW_BulletGroups_Youmu Konpaku.json  THLW_BulletGroups_Yuyuko Saigyouji.json  alice.json  all_sc.json  chen.json  cirno.json  darkmyon.json  eirin.json  gardener.json  hecc.json  kaguya.json  kerochan.json  koosh.json  medicine.json  mors 3.json  okuu.json  patchy.json  ran.json  reimu.json  remi.json  sanae.json  storycard.json  strawberisa.json  suika.json  toyo.json  youmu.json  yukari.json  (+1 more)
pkg/: package.json  tlw_cal_rewrite_number_2.d.ts  tlw_cal_rewrite_number_2.js  tlw_cal_rewrite_number_2_bg.wasm  tlw_cal_rewrite_number_2_bg.wasm.d.ts
pkg/snippets/tlw_cal_rewrite_number_2-ac27fe8a758df760/: md.js
src/: effects.rs  lib.rs
